--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "simple-line-icons": "^2.4.1",
     "tableexport": "^5.0.2",
     "vue": "^2.6.14",
+    "vue-alertify": "^1.1.0",
     "vue-chartjs": "^3.4.0",
     "vue-form-wizard": "^0.8.4",
     "vue-idb": "^0.2.0",
